fix button on small screens

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -26,12 +26,15 @@
     position: absolute;
     top: 0;
     left: 0;
-    padding: 12px 48px;
+    padding: 12px 0;
     width: 100%;
     height: 100%;
     text-decoration: none;
     color:$color-white;
-    
+
+    @include onTablets {
+      padding: 12px 48px;
+    }
     &:hover {
       color: $color-black;
     }
